# materials-compendium

./: .buildinfo  .readthedocs.yaml  CHANGELOG  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build_and_publish_docs.yml  deploy_docs.yml  publish_release.yml  publish_to_pypi.yml  render_docs.yml  run_test.yml
_modules/: index.html
_modules/materials_compendium/: parse.html  utils.html
_sources/api/: index.rst.txt
_sources/user/: index.rst.txt
_static/: cloud.css  documentation_options.js  pyne.css
api/: index.html
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  requirements.txt
docs/source/_static/: pyne.css_t
docs/source/_templates/: myclass.rst
docs/source/examples/: materials-compendium.rst
docs/source/tutorial/: materials-compendium.ipynb
src/materials_compendium/: __init__.py  parse.py  parse_material_compendium.py  utils.py
tests/: test.py  test_materials_compendium.py
tutorial/: materials-compendium.html
user/: index.html
